# FastAPI-Template

./: .gitguardian.yml  .gitignore  .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt
docker/: Dockerfile  docker-compose.yml
src/: .env.example  app.py
src/controller/api/endpoints/: base.py  customer.py
src/controller/api/schemas/: base.py  customer.py
src/controller/errors/: exception_manager.py
src/core/: config.py  logger.py
src/repository/: create_db.py  session.py
src/repository/crud/: address.py  base.py  customer.py
src/repository/models/: base.py  customer.py
src/service/: exceptions.py
src/service/customer/: service.py
