[project]
name = "FastAPI-Production-Template"
version = "0.1.0"
description = "FastAPI Production Template"
requires-python = ">=3.13"
license = "MIT"

dependencies = [
    "asgi-correlation-id>=4.3.4",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.42",
    "sqlalchemy-utils>=0.41.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "flake8>=7.3.0",
    "pre-commit>=4.2.0",
    "pylance>=0.32.0",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.7",
]


[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "BLE001",
    "COM812",
    "ISC001",
    "D100",
    "D104",
    "D105",
    "D107",
    "D205",
    "D211",
    "D212",
    "E203",
    "E266",
    "ANN204",
    "S602",
    "ERA001",
    "PLR0913",
    "N803",
    "N815",
    "UP046",
]
target-version = "py313"
line-length = 100

[tool.flake8]
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/controller/api/endpoints/customer.py" = ["N803", "B008"]
"src/repository/models/__init__.py" = ["N818", "F401"]


[tool.black]
line-length = 100
